# job-app-copilot

./: .gitignore  README.md  SECURITY.md  analyze_gaps.py  create_interview_event.py  email_utils.py  main.py  mark_callback.py  mock_interview.py  pyproject.toml  requirements.txt  research_company.py  sanitize_practice.py  user_utils.py
job_app_copilot/: __init__.py  __main__.py  analyze_gaps.py  create_interview_event.py  main.py  mark_callback.py  mock_interview.py  research_company.py  secure_utils.py  user_utils.py
outputs/: Interview_Canadian_Cancer_Society_2026-04-13.ics  application_2026-03-12.txt  atlis_recruitment_application_2026-03-13.txt  bena_fastenings_incorporated_application_2026-03-16.txt  canadian_cancer_society_application_2026-03-13.txt  chem_trade_application_2026-03-19.txt  chemtrade_application_2026-03-13.txt  chemtrade_application_2026-03-22.txt  franklin_empire_inc_application_2026-03-15.txt  frontier_dental_supply_application_2026-03-22.txt  legal_aid_ontario_application_2026-03-13.txt  moneris_solutions_application_2026-03-13.txt  procom_application_2026-03-13.txt  procom_application_2026-03-14.txt  rexel_application_2026-03-13.txt  rexel_application_2026-03-15.txt  strategic_technology_resources_inc._application_2026-03-13.txt
resumes/: master_resume.txt
tests/: __init__.py  test_cli.py  test_email_utils.py  test_secure_utils.py  test_validation.py
